<resources>
    <string name="app_name">Apis Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_effect_preview_list">EffectPreviewListActivity</string>
    <string name="title_activity_effect_preview_list_test">EffectPreviewListTestActivity</string>
    <string name="title_activity_effect_preview">EffectPreviewActivity</string>
    <string name="title_activity_effect_show_time">EffectShowTimeActivity</string>
    <string name="title_activity_effect_list">EffectListActivity</string>
    <string name="title_activity_clip_info">ClipInfoActivity</string>
    <string name="title_activity_clip_color_adjust">ClipColorAdjust</string>
    <string name="title_activity_clip_crop_test">ClipCropTestActivity</string>
    <string name="title_activity_clip_trim_test">ClipTrimTestActivity</string>
    <string name="title_activity_clip_multitrim_test">ClipMultiTrimActivity</string>
    <string name="title_activity_project_edit">ProjectEditActivity</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title_activity_export_direct_test">ExportDirectTestActivity</string>
    <string name="title_activity_audio_speed_control">AudioSpeedControlActivity</string>
    <string name="title_activity_audio_sound_setting">AudioSoundSettingActivity</string>
    <string name="title_activity_audio_bgm_test">AudioBGMTestActivity</string>
    <string name="title_activity_audio_voice_changer">AudioVoiceChangerActivity</string>
    <string name="title_activity_audio_envelop">AudioEnvelopActivity</string>
    <string name="title_activity_audio_track">AudioTrackActivity</string>
    <string name="title_activity_audio_track_info">AudioTrackInfoActivity</string>
    <string name="title_activity_piptest">PIPTestActivity</string>
    <string name="title_activity_pipdisplay_test">PIPDisplayTestActivity</string>
    <string name="title_activity_pipplay_test">PIPPlayTestActivity</string>
    <string name="title_activity_pip_dual_display_test">PIPDualDisplayTestActivity</string>
    <string name="title_activity_thumbnail">ThumbnailActivity</string>
    <string name="title_activity_thumbnail_seektab">ThumbnailSeektabActivity</string>
    <string name="title_activity_thumbnail_cacnel_test">ThumbnailCacnelTestActivity</string>
    <string name="title_activity_template_test">TemplateTestActivity</string>
    <string name="title_activity_template20_test">Template20TestActivity</string>
    <string name="title_activity_template_demo">Template Demo</string>
    <string name="title_activity_collage_test">CollageTestActivity</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="title_activity_snap_shot_test">SnapShotTestActivity</string>
    <string name="title_activity_fast_preview_test">FastPreviewTestActivity</string>
    <string name="title_activity_exception_test">ExceptionTestActivity</string>
    <string name="title_activity_reverse_test">ReverseTestActivity</string>
    <string name="title_activity_reverse3_test">Reverse3TestActivity</string>
    <string name="title_activity_overlay_user_image">OverlayUserImageActivity</string>
    <string name="title_activity_overlay_slide_show">OverlaySlideShowActivity</string>
    <string name="title_activity_overlay_fast_view">OverlayFastViewActivity</string>
    <string name="title_activity_transcoding_test">TranscodingTestActivity</string>
    <string name="title_activity_color_effect_list">ColorEffectListActivity</string>
    <string name="title_activity_overlay_kmtext">OverlayKMTextActivity</string>
    <string name="title_activity_export_vs_trans_code">ExportVsTransCodeActivity</string>
    <string name="title_activity_aspect_ratio_test">AspectRatioTestActivity</string>
    <string name="title_activity_auto_qatest">AutoQATestActivity</string>
    <string name="title_activity_video_view">VideoViewActivity</string>
    <string name="title_activity_audio_edit">AudioEditActivity</string>
    <string name="title_activity_audio_visualizer">AudioVisualizerActivity</string>
    <string name="title_activity_template_manager">TemplateManagerActivity</string>
    <string name="title_activity_chroma_key_test">ChromaKeyTestActivity</string>
    <string name="title_activity_clip_effect_preview">ClipEffectPreviewActivity</string>
    <string name="title_activity_asset_list">AssetListActivity</string>
    <string name="title_activity_surface_view_test">SurfaceViewTestActivity</string>
    <string name="title_activity_engine_view_test">EngineViewTestActivity</string>
    <string name="title_activity_overlay_filter_pre_view">OverlayFilterPreViewActivity</string>
    <string name="title_activity_effect_capture">EffectCaptureActivity</string>
    <string name="title_activity_face_detector">FaceDetectorActivity</string>
    <string name="title_activity_theme_view_test">ThemeViewTestActivity</string>
    <string name="title_activity_overlay_mask_test">OverlayMaskTestActivity</string>
    <string name="Template">Template</string>
    <string name="Audio">Audio</string>
    <string name="Effect">Effect</string>
    <string name="Transi">Transi</string>
    <string name="Lut">Lut</string>
    <string name="Overlay">Overlay</string>
    <string name="Filter">Filter</string>
    <string name="_16v9">-16:9-</string>
    <string name="_9v16">-9:16-</string>
    <string name="_1v1">-1:1-</string>
    <string name="_2v1">-2:1-</string>
    <string name="_1v2">-1:2-</string>
    <string name="_4v3">-4:3-</string>
    <string name="App_Asset">App Asset</string>
    <string name="Store">Store</string>
    <string name="Share">Share</string>
    <string name="Num0">.0</string>
    <string name="Fade_In_Out">Fade In/Out</string>
    <string name="Loop">Loop</string>
    <string name="Trim_5sec">Trim_5sec</string>
    <string name="Play">Play</string>
    <string name="Export">Export</string>
    <string name="Intent">Intent</string>
    <string name="all_vol">all vol:</string>
    <string name="Num100">.100</string>
    <string name="Add">Add</string>
    <string name="Clear">Clear</string>
    <string name="BGM">BGM</string>
    <string name="Sticker">Sticker</string>
    <string name="chnage">chnage</string>
    <string name="Start_Time">Start_Time</string>
    <string name="Clip_BGM_Level">Clip_BGM_Level</string>
    <string name="BGM_Volume">BGM_Volume</string>
    <string name="Trim_Time">Trim_Time</string>
    <string name="Volume">Volume :</string>
    <string name="env_time">env_time</string>
    <string name="env_vol">env_vol</string>
    <string name="Set">Set</string>
    <string name="Sound">Sound</string>
    <string name="Clip">Clip</string>
    <string name="Stop">Stop</string>
    <string name="End_Time">End_Time </string>
    <string name="Trim">Trim</string>
    <string name="SET_INFO">SET_INFO</string>
    <string name="AddBGM">AddBGM</string>
    <string name="New_Button">New_Button</string>
    <string name="Num1">.1</string>
    <string name="Interval">Interval:</string>
    <string name="pFrame">p-Frame:</string>
    <string name="thumbnailFirst">First</string>
    <string name="thumbnailLast">Last</string>
    <string name="Direct">Direct</string>
    <string name="Num00_00_00">.00:00:00</string>
    <string name="AutoTrim">AutoTrim</string>
    <string name="UseRatio">UseRatio</string>
    <string name="Rotate">Rotate</string>
    <string name="Count">Count:</string>
    <string name="AutoTrimNExport">AutoTrimNExport</string>
    <string name="IDRFrameOn">IDRFrameOn</string>
    <string name="Num1000">.1000</string>
    <string name="BGClip">BGClip</string>
    <string name="default_interval_1000__count_15">default_interval:_1000,count:_15</string>
    <string name="Chroma_Color">Chroma_Color</string>
    <string name="Chormakey_Set">Chormakey_Set</string>
    <string name="ChormakeyMask">ChormakeyMask</string>
    <string name="FG_000">FG:000</string>
    <string name="BG_000">BG:000</string>
    <string name="Brightness">Brightness</string>
    <string name="Saturation">Saturation</string>
    <string name="Contrast">Contrast  </string>
    <string name="Vignette">Vignette  </string>
    <string name="VignetteRange">VignetteRange  </string>
    <string name="Sharpness">Sharpness</string>
    <string name="Color_effect">Color_effect  </string>
    <string name="OK">OK</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="Set_Effect">Set_Effect</string>
    <string name="_720X480">_720X480</string>
    <string name="New_Text">New_Text</string>
    <string name="Mix">Mix</string>
    <string name="IDR_Seek">IDR_Seek</string>
    <string name="speed1">speed1</string>
    <string name="Cancel">Cancel</string>
    <string name="P_frame_export">P_frame_export</string>
    <string name="AllM_V">AllM_V</string>
    <string name="Before_Iframe">Before_Iframe</string>
    <string name="Iframe_Iframe">Iframe_Iframe</string>
    <string name="frame30">frame30</string>
    <string name="_1280X720">_1280X720</string>
    <string name="_1920X1080">_1920X1080</string>
    <string name="Original_resolution">Original_resolution</string>
    <string name="Export_Cancel">Cancel</string>
    <string name="Export_Cancel_Save">Cancel_Save</string>
    <string name="Pause">Pause</string>
    <string name="SamplingRate">SamplingRate</string>
    <string name="Audio_SamplingRate">Audio SamplingRate : </string>
    <string name="Video_Resolution">Video Resolution : </string>
    <string name="Video_Bitrate">Video Bitrate : </string>
    <string name="Video_Bitrate_BPS">MB bps</string>
    <string name="Video_FPS">Video FPS : </string>
    <string name="Video_FPS_FPS">fps</string>
    <string name="FastPreviewStart">FastPreviewStart</string>
    <string name="FastPreViewSetStop">FastPreViewSetStop</string>
    <string name="GetThumb">GetThumb</string>
    <string name="Left">Left</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="Right">Right</string>
    <string name="Num1.0">.1.0</string>
    <string name="Scale_Height">Scale_Height</string>
    <string name="Scale_Width">Scale_Width</string>
    <string name="Alpha">Alpha</string>
    <string name="Y_Position">Y_Position</string>
    <string name="_640">_640</string>
    <string name="X_Position">X_Position</string>
    <string name="Small_Text">Small_Text</string>
    <string name="Reset">Reset</string>
    <string name="Text_Title">Text_Title</string>
    <string name="Color">Color</string>
    <string name="Font">Font</string>
    <string name="Size">Size</string>
    <string name="_null">.</string>
    <string name="Shadow">Shadow</string>
    <string name="OutLine">OutLine</string>
    <string name="Glow">Glow</string>
    <string name="LayerExpression">LayerExpression</string>
    <string name="SelectedListItem">SelectedListItem</string>
    <string name="X_0_1280">X_0_1280</string>
    <string name="Y_0_720">Y_0_720</string>
    <string name="Mask">Mask</string>
    <string name="SetText">SetText</string>
    <string name="Solid">Solid</string>
    <string name="Large_Text">Large_Text</string>
    <string name="path">path</string>
    <string name="V">V</string>
    <string name="C">C</string>
    <string name="S">S</string>
    <string name="P">P</string>
    <string name="E">E</string>
    <string name="Select_Aspect_Mode">Select_Aspect_Mode</string>
    <string name="API_Level">API Level:  </string>
    <string name="template_reset">Reset Template</string>
    <string name="asset_install">Install Asset</string>
    <string name="overlappedtransition">Enable Transition Overlap</string>
    <string name="letterbox">Enable Letter Box</string>
    <string name="vendor">Vendor</string>
    <string name="facedetector">Face Detection</string>
    <string name="facedetector_on">Face ON</string>
    <string name="facedetector_off">Face OFF</string>
</resources>