<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="@string/Template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_template"
            android:checked="true" />

        <CheckBox
            android:text="@string/Audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_audio"
            android:layout_toEndOf="@+id/checkBox_template"
            android:checked="true" />

        <CheckBox
            android:text="@string/Effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_effect"
            android:layout_toEndOf="@+id/checkBox_audio"
            android:checked="true" />

        <CheckBox
            android:text="@string/Transi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_transition"
            android:layout_toEndOf="@+id/checkBox_effect"
            android:checked="true" />

        <CheckBox
            android:text="@string/Lut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_lut"
            android:layout_toEndOf="@+id/checkBox_transition"
            android:checked="true" />

        <CheckBox
            android:text="@string/Overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_overlay"
            android:layout_below="@+id/checkBox_template"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <CheckBox
            android:text="@string/Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_filter"
            android:layout_below="@+id/checkBox_template"
            android:layout_toEndOf="@+id/checkBox_overlay"
            android:checked="true" />


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <CheckBox
            android:text="@string/_16v9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_16v9"
            android:layout_weight="1"
            android:checked="true" />

        <CheckBox
            android:text="@string/_9v16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_9v16"
            android:layout_weight="1"
            android:checked="true" />

        <CheckBox
            android:text="@string/_1v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_1v1"
            android:layout_weight="1"
            android:checked="true" />

        <CheckBox
            android:text="@string/_2v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_2v1"
            android:layout_weight="1"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="@string/App_Asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_asset"
            android:layout_weight="1"
            android:checked="true" />

        <CheckBox
            android:text="@string/Store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_store"
            android:layout_weight="1"
            android:checked="true" />

        <CheckBox
            android:text="@string/Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_share"
            android:layout_weight="1"
            android:checked="true" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView_assets" />
    </LinearLayout>
</LinearLayout>
