<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:text="@string/facedetector"
            android:textSize="18sp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rFace"
                android:layout_width="0dip"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/facedetector_off"/>
            <RadioButton
                android:id="@+id/rZoom"
                android:layout_width="0dip"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/facedetector_on"/>.
        </RadioGroup>

        <Switch
            android:text="@string/overlappedtransition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:id="@+id/switchOverlap"/>

        <Switch
            android:text="@string/letterbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:id="@+id/switchLetter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/vendor"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/listview_vendor"
            android:layout_width="match_parent"
            android:layout_height="200dip">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/resetTemplate"
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.1"
                android:padding="10dip"
                android:textSize="10sp"
                android:text="@string/template_reset"/>

            <Button
                android:id="@+id/callVasset"
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.1"
                android:padding="10dip"
                android:textSize="10sp"
                android:text="@string/Store"/>

            <Button
                android:id="@+id/installTemplate"
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.1"
                android:padding="10dip"
                android:textSize="10sp"
                android:text="@string/asset_install"/>

            <Button
                android:id="@+id/intent"
                android:layout_width="0dip"
                android:layout_height="50dip"
                android:layout_weight="0.1"
                android:padding="10dip"
                android:textSize="10sp"
                android:text="@string/Intent"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>